--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -1,4 +1,4 @@
-name: Increment_version of updated languages
+name: Increment version of updated languages
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 jobs:
   default:
     runs-on: ubuntu-latest
-    name: Increment_version of updated languages
+    name: Increment version of updated languages
 
     steps:
 
@@ -31,3 +31,12 @@ jobs:
       - name: Bump version of updated languages
         run: |
           python3 version_bump.py ${{ steps.changed-files.outputs.all }}
+
+      - name: Create PR for incremented versions
+        uses: peter-evans/create-pull-request@v3.10.0
+        with:
+          commit-message: Language add-on versions incremented
+          title: Language add-on versions incremented
+          body: Language add-on versions incrementing triggered by ${{ github.sha }}
+          branch: inc-ver
+          delete-branch: true
