--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          path: project
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -25,12 +26,14 @@ jobs:
           python-version: '3.9'
 
       - name: Get changed files
-        id: changed-files
-        uses: jitterbit/get-changed-files@v1
+        uses: lots0logs/gh-action-get-changed-files@2.1.4
+        with:
+          path: ./project
 
       - name: Bump version of updated languages
         run: |
-          python3 increment_version.py ${{ steps.changed-files.outputs.all }}
+          python3 increment_version.py
+        working-directory: ./project
 
       - name: Create PR for incremented versions
         uses: peter-evans/create-pull-request@v3.10.0
@@ -40,3 +43,4 @@ jobs:
           body: Language add-on versions incrementing triggered by ${{ github.sha }}
           branch: inc-ver
           delete-branch: true
+          path: ./project
