--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -18,7 +18,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          path: project
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -26,14 +25,11 @@ jobs:
           python-version: '3.9'
 
       - name: Get changed files
-        uses: lots0logs/gh-action-get-changed-files@2.1.4
-        with:
-          path: ./project
+        uses: trilom/file-changes-action@v1.2.4
 
       - name: Bump version of updated languages
         run: |
           python3 increment_version.py
-        working-directory: ./project
 
       - name: Create PR for incremented versions
         uses: peter-evans/create-pull-request@v3.10.0
@@ -43,4 +39,3 @@ jobs:
           body: Language add-on versions incrementing triggered by ${{ github.sha }}
           branch: inc-ver
           delete-branch: true
-          path: ./project
